// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render correctly when the type is flat 1`] = `
.c0 {
  background-color: transparent;
  border-radius: 12px;
  color: #34333A;
  border-color: transparent;
  padding: 5px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD   border-color:#BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 1`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #F9A109;
  color: #F9A109;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 2`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #56CCF2;
  color: #56CCF2;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 3`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #EB5757;
  color: #EB5757;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 4`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #FFFFFF;
  color: #FFFFFF;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 5`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #E0E0E0;
  color: #E0E0E0;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 6`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #BDBDBD;
  color: #BDBDBD;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 7`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #828282;
  color: #828282;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 8`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #000000;
  color: #000000;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 9`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #34333A;
  color: #34333A;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 10`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #80485b;
  color: #80485b;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is outlined and the variant is valid 11`] = `
.c0 {
  background-color: transparent;
  border-radius: 24px;
  border-color: #fff0de;
  color: #fff0de;
  padding: 6px 15px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 1`] = `
.c0 {
  background-color: #F9A109;
  border-color: #F9A109;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 2`] = `
.c0 {
  background-color: #56CCF2;
  border-color: #56CCF2;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 3`] = `
.c0 {
  background-color: #EB5757;
  border-color: #EB5757;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 4`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 5`] = `
.c0 {
  background-color: #E0E0E0;
  border-color: #E0E0E0;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 6`] = `
.c0 {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 7`] = `
.c0 {
  background-color: #828282;
  border-color: #828282;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 8`] = `
.c0 {
  background-color: #000000;
  border-color: #000000;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 9`] = `
.c0 {
  background-color: #34333A;
  border-color: #34333A;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 10`] = `
.c0 {
  background-color: #80485b;
  border-color: #80485b;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 11`] = `
.c0 {
  background-color: #fff0de;
  border-color: #fff0de;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c0:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

<div>
  <button
    class="c0"
  >
    Button
  </button>
</div>
`;
